bug 60050, sr=ftang MS-IME 95/97/98/2000 may send WM_IME_COMPOSITION with non-conversion mode before it send WM_IME_STARTCOMPOSITION.